Clase11/01-despliegue-google-cloud/frontend-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-svc
spec:
  type: ClusterIP
  selector:
    env: dev
    app: frontend
  ports:
    - port: 80
      targetPort: 9000
      protocol: TCP
