Clase11/01-despliegue-google-cloud/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-app
spec:
  rules:
    - http:
        paths:
          - path: /api/config
            pathType: Prefix
            backend:
              service:
                name: "frontend-svc"
                port:
                  number: 80
          - path: /api/message
            pathType: Prefix
            backend:
              service:
                name: "backend1-svc"
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: "frontend-svc"
                port:
                  number: 80
